# mcp-scale-test

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
examples/: scale.yaml  sse-config.yaml  stdio-config.yaml  streamable-http-alt-config.yaml  streamable-http-config.yaml
mcp_scale_test/: __init__.py  cli.py  client.py  config.py  load_test.py  variables.py
tests/: test_config.py  test_load_test.py  test_variables.py
